# tuigreet

./: .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  LICENSE  README.md  build.rs  i18n.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  other-issue.md
.github/workflows/: branch.yml  dev.yml  main.yml  pr.yml  release.yml  tip.yml
contrib/: git-version.sh  tuigreet.toml
contrib/fixtures/: passwd
contrib/locales/ca-ES/: tuigreet.ftl
contrib/locales/de-DE/: tuigreet.ftl
contrib/locales/en-US/: tuigreet.ftl
contrib/locales/es-CL/: tuigreet.ftl
contrib/locales/fr-FR/: tuigreet.ftl
contrib/locales/it-IT/: tuigreet.ftl
contrib/locales/pl-PL/: tuigreet.ftl
contrib/locales/pt-BR/: tuigreet.ftl
contrib/locales/ru-RU/: tuigreet.ftl
contrib/locales/uk-UA/: tuigreet.ftl
contrib/locales/zh-CN/: tuigreet.ftl
contrib/man/: tuigreet-1.scd
src/: config.rs  event.rs  greeter.rs  info.rs  ipc.rs  keyboard.rs  macros.rs  main.rs  power.rs  ui.rs
src/config/: file.rs  mod.rs  parser.rs
src/integration/: auth.rs  display.rs  exit.rs  menus.rs  mod.rs  movement.rs  remember.rs
src/integration/common/: backend.rs  mod.rs  output.rs
src/ui/: command.rs  i18n.rs  mod.rs  power.rs  processing.rs  prompt.rs  sessions.rs  users.rs  util.rs
src/ui/common/: masked.rs  menu.rs  mod.rs  style.rs
