[package]
name = "tuigreet"
version = "0.7.3"
authors = ["Antoine POPINEAU <antoine.popineau@appscho.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
chrono = { version = "^0.4", features = ["unstable-locales"] }
crossterm = { version = "^0.27", features = ["event-stream"] }
futures = "0.3"
getopts = "^0.2"
greetd_ipc = { version = "^0.9", features = ["tokio-codec"] }
i18n-embed = { version = "^0.14", features = [
  "desktop-requester",
  "fluent-system",
] }
i18n-embed-fl = "^0.7"
lazy_static = "^1.4"
nix = { version = "^0.27", features = ["feature"] }
tui = { package = "ratatui", version = "^0.24", default-features = false, features = [
  "crossterm",
] }
rust-embed = "^8.0"
rust-ini = "^0.20"
smart-default = "^0.7"
textwrap = "^0.16"
tokio = { version = "^1.2", default-features = false, features = [
  "macros",
  "rt-multi-thread",
  "net",
  "sync",
  "time",
  "process",
] }
unic-langid = "^0.9"
zeroize = "^1.3"
# TODO: Change to published version when a new release is out.
uzers = { git = "https://github.com/rustadopt/uzers-rs", branch = "main" }

[profile.release]
lto = true
