[package]
name = "tuigreet"
version = "0.9.0"
authors = ["Antoine POPINEAU <antoine.popineau@appscho.com>"]
edition = "2018"
build = "build.rs"

[features]
default = []
nsswrapper = []

[dependencies]
chrono = { version = "^0.4", features = ["unstable-locales"] }
crossterm = { version = "^0.27", features = ["event-stream"] }
futures = "0.3"
getopts = "^0.2"
greetd_ipc = { version = "^0.10", features = ["tokio-codec"] }
i18n-embed = { version = "^0.14", features = [
  "desktop-requester",
  "fluent-system",
] }
i18n-embed-fl = "^0.8"
lazy_static = "^1.4"
nix = { version = "^0.28", features = ["feature"] }
tui = { package = "ratatui", version = "^0.26", default-features = false, features = [
  "crossterm",
] }
rust-embed = "^8.0"
rust-ini = "^0.21"
smart-default = "^0.7"
textwrap = "^0.16"
tokio = { version = "^1.2", default-features = false, features = [
  "macros",
  "rt-multi-thread",
  "net",
  "sync",
  "time",
  "process",
] }
unic-langid = "^0.9"
zeroize = "^1.3"
uzers = "0.12"
rand = "0.8.5"

[profile.release]
lto = true
