[package]
name = "tuigreet"
version = "0.9.1"
authors = ["Antoine POPINEAU <antoine@popineau.eu>"]
edition = "2018"
build = "build.rs"

[features]
default = []
nsswrapper = []

[dependencies]
ansi-to-tui = "5.0.0-rc.1"
chrono = { version = "^0.4", features = ["unstable-locales"] }
crossterm = { version = "^0.27", features = ["event-stream"] }
futures = "0.3"
getopts = "^0.2"
greetd_ipc = { version = "^0.10", features = ["tokio-codec"] }
i18n-embed = { version = "^0.14", features = [
  "desktop-requester",
  "fluent-system",
] }
i18n-embed-fl = "^0.8"
lazy_static = "^1.4"
nix = { version = "^0.28", features = ["feature"] }
tui = { package = "ratatui", version = "^0.27", default-features = false, features = [
  "crossterm",
  "unstable"
] }
rust-embed = "^8.0"
rust-ini = "^0.21"
smart-default = "^0.7"
tokio = { version = "^1.2", default-features = false, features = [
  "macros",
  "rt-multi-thread",
  "net",
  "sync",
  "time",
  "process",
] }
unic-langid = "^0.9"
zeroize = "^1.3"
uzers = "0.12"
rand = "0.8.5"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
utmp-rs = "0.3.0"
serde = { version = "1.0.210", features = ["serde_derive"] }
toml = "0.8.19"

[profile.release]
lto = true

[dev-dependencies]
greetd-stub = "0.3.0"
tempfile = "3.10.1"
unicode-width = "0.1.12"
